--- a/webapps/dashboard/index.html
+++ b/webapps/dashboard/index.html
@@ -5,6 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Localup Dashboard</title>
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Localup Dashboard" />
+    <meta name="description" content="Monitor traffic, inspect HTTP requests and responses, and manage your tunnels in real-time with the Localup Dashboard." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Localup Dashboard" />
+    <meta property="og:description" content="Monitor traffic, inspect HTTP requests and responses, and manage your tunnels in real-time with the Localup Dashboard." />
+    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Localup Dashboard" />
+    <meta property="twitter:description" content="Monitor traffic, inspect HTTP requests and responses, and manage your tunnels in real-time with the Localup Dashboard." />
+    <meta property="twitter:image" content="/og-image.svg" />
   </head>
   <body>
     <div id="root"></div>
